# relay

./: .env.example  .gitignore  Cargo.toml  README.md  app.go  app_commands.go  app_runtime.go  app_state.go  app_test.go  codex.go  codex_test.go  config.go  config_test.go  go.mod  jsonrpc.go  logging.go  logging_helpers.go  main.go  pyproject.toml  split_command.go  strings.go  telegram.go  telegram_test.go  test_helpers.go
.codex-schema/: codex_app_server_protocol.v2.schemas.json
.github/workflows/: build-binaries.yml
internal/codex/: codex.go  codex_test.go
internal/config/: config.go  config_test.go  split_command.go
internal/jsonrpc/: jsonrpc.go
internal/logx/: logging.go  logging_helpers.go  logging_helpers_test.go
internal/relay/: app.go  app_commands.go  app_runtime.go  app_state.go  app_test.go  continuity.go  reload.go
internal/telegram/: telegram.go  telegram_test.go
relay_bot/: __init__.py  __main__.py  app.py  codex.py  config.py  telegram.py  transport.py
src/: app.rs  codex.rs  config.rs  jsonrpc.rs  main.rs  telegram.rs
tests/: test_telegram.py
