[package]
name = "telegram-codex-relay"
version = "0.1.0"
edition = "2021"
description = "Relay messages between a Telegram bot and the Codex app server."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
