[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-codex-relay"
version = "0.1.0"
description = "Relay messages between a Telegram bot and the Codex app server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "websockets>=15.0.0",
]

[project.scripts]
telegram-codex-relay = "relay_bot.__main__:main"

[tool.setuptools.packages.find]
include = ["relay_bot*"]
